crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__fn_endswith.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(r#\"* | where endswith(host, \".local\")\"#)"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE SUFFIX("host", ?)
---
params:
  0: '.local'
