crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__fn_json_valid.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | where json_valid(message)\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE JSON_VALID("message")
