crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__fn_split.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(r#\"* | let seg = split(path, \"/\", 2)\"#)"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
)
SELECT COLUMNS(c -> c NOT IN ('seg')), (STRING_SPLIT("path", ?)[3]) AS "seg"
FROM "_s0"
---
params:
  0: '/'
