crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__fn_strftime_dsl_order.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(r#\"* | let formatted = strftime(timestamp, \"%Y-%m-%d\")\"#)"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
)
SELECT COLUMNS(c -> c NOT IN ('formatted')), (STRFTIME("timestamp", ?)) AS "formatted"
FROM "_s0"
---
params:
  0: '%Y-%m-%d'
