crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__hot_source_emits_union_all.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: format_result(&result)
---
SELECT *
FROM (SELECT * FROM read_parquet('/data/**/*.parquet', union_by_name=true) UNION ALL BY NAME SELECT * REPLACE (TRY_CAST("timestamp" AS TIMESTAMP) AS "timestamp") FROM read_json('/tmp/hot_abc123.ndjson', format='newline_delimited', records=true, auto_detect=true, field_appearance_threshold=0))
WHERE "service" = ?
---
params:
  0: 'nginx'
