crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__hot_source_with_comparison_pins.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: format_result(&result)
---
SELECT *
FROM (SELECT * FROM read_parquet('/data/**/*.parquet', union_by_name=true) UNION ALL BY NAME SELECT * REPLACE (TRY_CAST("_time" AS TIMESTAMP) AS "_time", TRY_CAST("_ingested" AS TIMESTAMP) AS "_ingested", TRY_CAST("duration" AS BIGINT) AS "duration") FROM read_json('/tmp/hot_abc123.ndjson', format='newline_delimited', records=true, auto_detect=true, field_appearance_threshold=0))
WHERE ("status" = ? OR COALESCE(TRY_CAST("status" AS DOUBLE) = ?, FALSE)) AND "duration" > ?
---
params:
  0: '200'
  1: 200
  2: 5
