crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__list_source_emits_read_parquet_list.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: format_result(&result)
---
SELECT *
FROM read_parquet(['/data/2026-02-12/14/*.parquet', '/data/2026-02-12/15/*.parquet'], union_by_name=true)
